--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Web site created using create-react-app" />
-
+  <meta name="description" content="JesmyL.Space" />
 
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
-  <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
   <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#587455">
   <meta name="msapplication-TileColor" content="#7cae7d">
   <meta name="theme-color" content="#587455">
@@ -28,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>JesmyL</title>
 </head>
 
 <body>
