--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 <body translate="no">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <div id="qr-code-application-container"></div>
 </body>
 
 </html>
