--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,16 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <meta name="description" content="Сборник приложений" />
+  <meta name="apple-mobile-web-app-title" content="JesmyL" />
+  <meta name="msapplication-TileColor" content="#7cae7d">
+  <meta name="theme-color" content="#587455">
 
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
   <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#587455">
-  <meta name="msapplication-TileColor" content="#7cae7d">
-  <meta name="theme-color" content="#587455">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
   <title>JesmyL</title>
 </head>
 
