--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,72 @@
-<!DOCTYPE html>
-<html lang="en" translate="no">
+<!doctype html>
+<html
+  lang="en"
+  translate="no"
+>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    />
+    <meta
+      name="description"
+      content="Сборник приложений"
+    />
+    <meta
+      name="apple-mobile-web-app-title"
+      content="JesmyL"
+    />
+    <meta
+      name="msapplication-TileColor"
+      content="#7cae7d"
+    />
+    <meta
+      name="theme-color"
+      content="#587455"
+    />
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-  <meta name="description" content="Сборник приложений" />
-  <meta name="apple-mobile-web-app-title" content="JesmyL" />
-  <meta name="msapplication-TileColor" content="#7cae7d">
-  <meta name="theme-color" content="#587455">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="%PUBLIC_URL%/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%/favicon-16x16.png"
+    />
+    <link
+      rel="mask-icon"
+      href="%PUBLIC_URL%/safari-pinned-tab.svg"
+      color="#587455"
+    />
+    <link
+      rel="manifest"
+      href="%PUBLIC_URL%/manifest.json"
+    />
+    <script
+      async
+      src="https://telegram.org/js/telegram-widget.js?22"
+      data-telegram-login="jesmylbot"
+      data-size="small"
+      data-onauth="onTelegramNativeAuth(user)"
+      data-request-access="write"
+    ></script>
 
-  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
-  <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#587455">
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>JesmyL</title>
+  </head>
 
-  <title>JesmyL</title>
-</head>
-
-<body translate="no">
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-  <div id="qr-code-application-container"></div>
-</body>
-
+  <body translate="no">
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <div id="qr-code-application-container"></div>
+  </body>
 </html>
