feat(): add external excel-parser scripts in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,15 @@
     <title>JesmyL</title>
   </head>
 
+  <script
+    async
+    src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/jszip.js"
+  ></script>
+  <script
+    async
+    src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/xlsx.js"
+  ></script>
+
   <body translate="no">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
