--- a/public/index.html
+++ b/public/index.html
@@ -67,10 +67,7 @@
 
   <body translate="no">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div
-      id="error-log-list"
-      style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; background: black"
-    ></div>
+    <div id="error-log-list"></div>
     <div id="root"></div>
     <div id="qr-code-application-container"></div>
   </body>
